# simple-mri

./: pyproject.toml
.github/workflows/: conda-publish.yml  conda-publish.yml.old  pypi-publish.yml
