[tool.poetry]
name = "simple-mri"
version = "0.1.0"
description = ""
authors = ["Jørgen Riseth <jnriseth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nibabel = "^5.3.1"
numpy = ">=2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
